--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,23 +35,23 @@ services:
       - "2222:22"       # SSH
       - "3389:3389/tcp" # RDP (kali içinde xrdp varsa)
       - "3389:3389/udp"
-    stop_grace_period: 2m 
-                EOF
+    stop_grace_period: 2m
+EOF
 
-      - name:RunDockerCompose
-        run:|
+      - name: Run Docker Compose
+        run: |
           cd Kali
           docker-compose -f kali.yml up -d
 
-      - name:DownloadCloudflared
-        run:|
+      - name: Download Cloudflared
+        run: |
           ARCH="amd64"
           URL="https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-${ARCH}"
           curl -L "$URL" -o cloudflared
           chmod +x cloudflared
 
-      - name:StartCloudflaredTunnel
-        run:|
+      - name: Start Cloudflared Tunnel
+        run: |
           ./cloudflared tunnel --url http://localhost:2222 --no-autoupdate > cf_log.txt 2>&1 &
           echo "Cloudflare linki oluşturuluyor..."
           sleep 10
@@ -60,16 +60,16 @@ services:
             if [[ -n "$LINK" ]]; then break; fi
             sleep 2
           done
-          echo "SSH/RDP bağlantı linkin:$LINK"
+          echo "SSH/RDP bağlantı linkin: $LINK"
           echo "$LINK" > link.txt
 
-      - name:UploadCloudflareRDPLink
-        uses:actions/upload-artifact@v4
-        with
-          name:cloudflare-kali-link
-          path:link.txt
+      - name: Upload Cloudflare RDP Link
+        uses: actions/upload-artifact@v4
+        with:
+          name: cloudflare-kali-link
+          path: link.txt
 
-      - name:Sleepfor6hourstokeepcontainerandtunnelalive
-        run:|
+      - name: Sleep for 6 hours to keep container and tunnel alive
+        run: |
           echo "6 saatlik Kali Linux oturumu başladı. BabaproMemo Tarafindan Yapilmistir!"
           sleep 21600
