--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,8 @@ services:
     cap_add:
       - NET_ADMIN
     ports:
-      - "2222:22"       # SSH
-      - "3389:3389/tcp" # RDP (kali içinde xrdp varsa)
+      - "2222:22"
+      - "3389:3389/tcp"
       - "3389:3389/udp"
     stop_grace_period: 2m
 EOF
